[metadata]
license = MIT
license_file = LICENSE
classifiers = 
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent


[options]
install_requires = 
    ensure==1.0.4
    langchain==0.2.5
    langchain-core==0.2.7
    langchain-openai==0.1.8
    langchain-text-splitters==0.2.1
    matplotlib==3.8.3
    networkx==3.2.1
    numpy==1.26.4
    pandas==2.2.1
    pydantic==2.7.4
    pydantic_core==2.18.4
    python-dotenv==1.0.1
    requests==2.27.1
    tiktoken==0.7.0
    tqdm==4.66.2
    unstructured==0.12.5
    wikipedia==1.4.0
python_requires==3.9.19

[options.extras_require]
testing = 
    pytest==8.2.2
    mypy==1.10.0
    flake8==7.1.0
    tox==4.15.1
    black==24.4.2

[options.package_data]
wikigraph_builder = py.typed

[flake8]
max-line-length = 160
exclude = __init__.py
